# emcad-desktop-agent

./: .gitignore  CLAUDE.md  README.md  package.json
client/: esbuild.config.mjs  package-lock.json  package.json
client/src/: api.js  cli.js
client/src/commands/: config.js  proxy.js  script.js
server/: build.bat  build.py  pyproject.toml
server/ipd_cadtool_agent/: __init__.py  config.py  executor.py  main.py  models.py  registrar.py  server.py  task_puller.py
server/ipd_emcad_agent/: __init__.py  executor.py
server/scripts/: call_agent.py  demo_io.py  test_script.py
