[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipd-cadtool-agent"
version = "0.1.0"
description = "IPD Cadtool Agent - 本地代理服务，执行 Python 脚本"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
ipd-cadtool-agent = "ipd_cadtool_agent.main:main"

[tool.setuptools.packages.find]
include = ["ipd_cadtool_agent*"]
